---------------------------------------------------------------------------
Version 5.8.5  [V5-stable] (rgerhards/al), 2011-??-??
- bugfix: potential hang condition during tag emulation
- bugfix: too-early string termination during tag emulation
- bugfix: The NUL-Byte for the syslogtag was not copied in MsgDup (msg.c)
---------------------------------------------------------------------------
Version 5.8.4  [V5-stable] (al), 2011-08-10
- bugfix: potential misadressing in property replacer
- bugfix: memcpy overflow can occur in allowed sender checkig
  if a name is resolved to IPv4-mapped-on-IPv6 address
  Found by Ismail Dönmez at suse
- bugfix: potential misadressing in property replacer
- bugfix: MSGID corruption in RFC5424 parser under some circumstances
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=275
---------------------------------------------------------------------------
Version 5.8.3  [V5-stable] (rgerhards), 2011-07-11
- systemd support: set stdout/stderr to null - thx to Lennart for the patch
- added support for the ":omusrmsg:" syntax in configuring user messages
- added support for the ":omfile:" syntax in configuring user messages
  Note: previous outchannel syntax will generate a warning message. This
  may be surprising to some users, but it is quite urgent to alert them
  of the new syntax as v6 can no longer support the previous one.
---------------------------------------------------------------------------
Version 5.8.2  [V5-stable] (rgerhards), 2011-06-21
- bugfix: problems in failover action handling
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=270
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=254
- bugfix: mutex was invalidly left unlocked during action processing
  At least one case where this can occur is during thread shutdown, which
  may be initiated by lower activity. In most cases, this is quite
  unlikely to happen. However, if it does, data structures may be 